objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Channel_Detail__c</fullName>
        <description>AQ_Custom</description>
        <label>Channel Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Postcard</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                    <isActive>false</isActive>
                    <label>In Person</label>
                </value>
                <value>
                    <fullName>Letter</fullName>
                    <isActive>false</isActive>
                    <label>Letter</label>
                </value>
                <value>
                    <fullName>Mailing</fullName>
                    <isActive>false</isActive>
                    <label>Mailing</label>
                </value>
                <value>
                    <fullName>Publication</fullName>
                    <isActive>false</isActive>
                    <label>Publication</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departments__c</fullName>
        <label>Departments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Departments</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Divisions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donor_Behavior__c</fullName>
        <description>AQ_Custom</description>
        <inlineHelpText>Identify the donor behavior you are including in this campaign.</inlineHelpText>
        <label>Donor Behavior</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lybunt</fullName>
                </value>
                <value>
                    <fullName>Sybunt</fullName>
                </value>
                <value>
                    <fullName>Futures</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Property, Buildings</fullName>
                </value>
                <value>
                    <fullName>Academic Division</fullName>
                </value>
                <value>
                    <fullName>Athletics</fullName>
                </value>
                <value>
                    <fullName>Faculty and Staff</fullName>
                </value>
                <value>
                    <fullName>Faculty Compensation</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Other Restricted</fullName>
                </value>
                <value>
                    <fullName>Physical Plant</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Student Aid</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Marketing promotion</fullName>
                </value>
                <value>
                    <fullName>Info Sharing</fullName>
                </value>
                <value>
                    <fullName>Unrestricted</fullName>
                </value>
                <value>
                    <fullName>Current Operations - Academic Divisions</fullName>
                    <isActive>false</isActive>
                    <label>Current Operations - Academic Divisions</label>
                </value>
                <value>
                    <fullName>Current Operations - Athletics</fullName>
                    <isActive>false</isActive>
                    <label>Current Operations - Athletics</label>
                </value>
                <value>
                    <fullName>Current Operations - Faculty Compensation</fullName>
                    <isActive>false</isActive>
                    <label>Current Operations - Faculty Compensation</label>
                </value>
                <value>
                    <fullName>Current Operations - Financial Aid</fullName>
                    <isActive>false</isActive>
                    <label>Current Operations - Financial Aid</label>
                </value>
                <value>
                    <fullName>Current Operations - Library</fullName>
                    <isActive>false</isActive>
                    <label>Current Operations - Library</label>
                </value>
                <value>
                    <fullName>Current Operations - Other Restricted</fullName>
                    <isActive>false</isActive>
                    <label>Current Operations - Other Restricted</label>
                </value>
                <value>
                    <fullName>Current Operations - Research</fullName>
                    <isActive>false</isActive>
                    <label>Current Operations - Research</label>
                </value>
                <value>
                    <fullName>Current Operations - Unrestricted</fullName>
                    <isActive>false</isActive>
                    <label>Current Operations - Unrestricted</label>
                </value>
                <value>
                    <fullName>Deferred Gifts - Endow, Restricted</fullName>
                    <isActive>false</isActive>
                    <label>Deferred Gifts - Endow, Restricted</label>
                </value>
                <value>
                    <fullName>Deferred Gifts - Other Purposes</fullName>
                    <isActive>false</isActive>
                    <label>Deferred Gifts - Other Purposes</label>
                </value>
                <value>
                    <fullName>Endow, Academic Divisions</fullName>
                    <isActive>false</isActive>
                    <label>Endow, Academic Divisions</label>
                </value>
                <value>
                    <fullName>Endow, Athletics</fullName>
                    <isActive>false</isActive>
                    <label>Endow, Athletics</label>
                </value>
                <value>
                    <fullName>Endow, Faculty and Staff</fullName>
                    <isActive>false</isActive>
                    <label>Endow, Faculty and Staff</label>
                </value>
                <value>
                    <fullName>Endow, Library</fullName>
                    <isActive>false</isActive>
                    <label>Endow, Library</label>
                </value>
                <value>
                    <fullName>Endow, Other</fullName>
                    <isActive>false</isActive>
                    <label>Endow, Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_Contact__c</fullName>
        <inlineHelpText>Person managing the list</inlineHelpText>
        <label>Responsible Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <sharingModel>FullAccess</sharingModel>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
</CustomObject>